Android Studio Calculator Day2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
                 android:id="@+id/clearBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="60dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -54,7 +54,7 @@
                 android:id="@+id/pmBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="60dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -67,7 +67,7 @@
                 android:id="@+id/percentBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="60dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -80,7 +80,7 @@
                 android:id="@+id/divideBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/btn_circle"
@@ -101,7 +101,7 @@
                 android:id="@+id/sevenBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -114,7 +114,7 @@
                 android:id="@+id/eightBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -127,7 +127,7 @@
                 android:id="@+id/noneBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -140,7 +140,7 @@
                 android:id="@+id/multipleBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/btn_circle"
@@ -160,7 +160,7 @@
                 android:id="@+id/fourBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -173,7 +173,7 @@
                 android:id="@+id/fiveBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -186,7 +186,7 @@
                 android:id="@+id/sixBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -199,7 +199,7 @@
                 android:id="@+id/subtractBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/btn_circle"
@@ -219,7 +219,7 @@
                 android:id="@+id/oneBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -232,7 +232,7 @@
                 android:id="@+id/twoBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -245,7 +245,7 @@
                 android:id="@+id/threeBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -258,7 +258,7 @@
                 android:id="@+id/addBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/btn_circle"
@@ -278,7 +278,7 @@
                 android:id="@+id/zeroBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -291,7 +291,7 @@
                 android:id="@+id/doubleZeroBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -304,7 +304,7 @@
                 android:id="@+id/tripleZeroBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1.2"
                 android:background="@drawable/btn_circle"
@@ -317,12 +317,12 @@
                 android:id="@+id/equalsBTN"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/btn_circle"
                 android:backgroundTint="#43A047"
-                android:onClick="clearBTN"
+                android:onClick="equalsBTN"
                 android:text="@string/equals"
                 android:textColor="#FFFFFF"
                 android:textSize="25sp" />
@@ -331,31 +331,32 @@
 
     <EditText
         android:id="@+id/textView"
-        android:layout_width="408dp"
-        android:layout_height="182dp"
+        android:layout_width="411dp"
+        android:layout_height="186dp"
+        android:layout_marginTop="4dp"
         android:autofillHints="0"
         android:inputType="textMultiLine"
-        android:maxLength="100"
-        android:maxLines="4"
+        android:lines="3"
         android:scrollHorizontally="false"
         android:text="@string/display"
         android:textAlignment="textEnd"
-        android:textSize="60sp"
+        android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="LabelFor" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="408dp"
         android:layout_height="45dp"
-        android:layout_marginTop="4dp"
-        android:text="result"
+        android:layout_marginTop="8dp"
+        android:text="@string/result"
         android:textAlignment="textEnd"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
